--- a/src/pages/filter/section/result.css
+++ b/src/pages/filter/section/result.css
@@ -40,17 +40,17 @@
 .result-wrapper {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 30px;
+  gap: 20px;
   margin-top: 20px;
 }
 
 .result {
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 10px;
   overflow: hidden;
   font-family: 'Noto Sans KR', sans-serif;
   transition: transform 0.3s ease;
-  box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.1); /* 그림자 효과 추가 */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .result:hover {
@@ -108,6 +108,7 @@
   padding: 0 10px;
 }
 
+
 .scrapbutton {
   background: transparent;
   color: #2c2c2c;  
@@ -118,6 +119,7 @@
   padding: 10px;
   font-size: 30px;
 }
+
 .scrapbutton:hover {
   background: transparent;
 }
