--- a/src/components/header/nav.css
+++ b/src/components/header/nav.css
@@ -84,7 +84,7 @@ font-style: normal; */
   color: black;
   text-decoration: none;
   margin-left: 10px;
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   font-weight: bold;
   font-family: 'Noto Sans KR', sans-serif;
   cursor: pointer;
@@ -129,6 +129,16 @@ font-style: normal; */
 }
 
 .styled-link-siginup {
+  color: black;
+  text-decoration: none;
+  margin-left: 10px;
+  font-size: 0.9rem;
+  font-weight: bold;
+  font-family: 'Noto Sans KR', sans-serif;
+  cursor: pointer;
+}
+
+.styled-link-logout{
   color: black;
   text-decoration: none;
   margin-left: 10px;
