--- a/src/pages/board/mateboard/mateboardlist.css
+++ b/src/pages/board/mateboard/mateboardlist.css
@@ -71,6 +71,7 @@
 
 /* 게시판 컨테이너 */
 .mate-board-container {
+  min-height: 50vh; /* 최소 높이를 브라우저 뷰포트 높이의 100%로 설정 */
   margin: 20px auto;
   width: 75%;
   font-family: 'Noto Sans KR', sans-serif;
@@ -145,12 +146,12 @@
   width: 80px;
   margin: 20px 20px 20px auto; /* Add margin-left:auto to push it to the right */
   padding: 7px;
-  background-color: #1f1f1f;
+  background-color: #2c2c2c;
   color: #fff;
   text-align: center;
   text-decoration: none;
   border: none;
-  border-radius: 15px;
+  border-radius: 5px;
   font-family: 'Noto Sans KR', sans-serif;
 }
 
@@ -158,30 +159,4 @@
 /* 글쓰기 버튼 호버 */
 .write-post-button:hover {
   background-color: #555555;
-}
-
-.pagination {
-  display: flex;
-  justify-content: center;
-  margin-top: 30px;
-}
-
-.pagination button {
-  margin: 0 5px;
-  padding: 5px 10px;
-  border: none;
-  background-color: transparent;
-  color: #2c2c2c;
-  cursor: pointer;
-  border-radius: 10px;
-  margin-bottom: 20px;
-}
-
-.pagination button:hover {
-  background-color: #afafaf;
-}
-
-.pagination button.active {
-  background-color: #afafaf;
-  color: white;
 }
