--- a/src/pages/board/tripboard/tripboardlist.css
+++ b/src/pages/board/tripboard/tripboardlist.css
@@ -72,6 +72,7 @@
 
 /* 게시판 컨테이너 */
 .trip-board-container {
+  min-height: 50vh; /* 최소 높이를 브라우저 뷰포트 높이의 100%로 설정 */
   margin: 20px auto;
   width: 75%;
   font-family: 'Noto Sans KR', sans-serif;
@@ -146,12 +147,12 @@
   width: 80px;
   margin: 20px 20px 20px auto; /* Add margin-left:auto to push it to the right */
   padding: 7px;
-  background-color: #1f1f1f;
+  background-color: #2c2c2c;
   color: #fff;
   text-align: center;
   text-decoration: none;
   border: none;
-  border-radius: 15px;
+  border-radius: 5px;
   font-family: 'Noto Sans KR', sans-serif;
 }
 
