--- a/src/pages/main/main.css
+++ b/src/pages/main/main.css
@@ -13,61 +13,51 @@
   font-style: normal;
 }
 
-@font-face {
-  font-family: 'TmonMonsori';
-  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/TmonMonsori.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-.inner {
+.banner-container {
   position: relative;
-  width: 100%; /* Adjust as necessary */
-  height: 800px; /* Ensure this matches your banner height */
+  width: 100vw;
+  height: 88vh; /* Full screen height */
 }
 
-.inner .banner-container {
-  position: relative;
-}
-
-.inner .Img {
+.Img {
   width: 100%;
-  height: auto;
-  display: block;
+  height: 88vh; /* 뷰포트 높이만큼 이미지 높이를 설정 */
+  object-fit: cover; /* 이미지 비율을 유지하면서 전체를 덮도록 설정 */
 }
 
 .main-text {
   font-family: 'Noto Sans KR', sans-serif; 
   position: absolute;
+  padding: 10px;
   bottom: 20px;
   right: 60px;
   color: rgba(255, 255, 255, 0.823);
   font-size: 14px;
   font-weight: 400;
   letter-spacing: 1px;
-  z-index: 10;
+  z-index: 2; /* 이미지 위에 텍스트가 보이도록 설정 */
 }
-
 
 .banner-text {
   position: absolute;
-  top: 250px;
-  left: 180px;
-  z-index: 1; /* 이미지 위에 텍스트가 보이도록 설정 */
+  top: 47%;
+  transform: translateY(-50%);
+  left: 10%;
+  z-index: 3; /* 이미지 위에 텍스트가 보이도록 설정 */
   color: white;
   font-size: 58px;
   font-weight: 600;
   letter-spacing: 2px;
-  /* font-family: "Montserrat", sans-serif; */
   font-family: 'TmonMonsori';
   text-shadow: 2px 4px 6px rgba(0, 0, 0, 0.5); /* 그림자 효과 추가 */
-  }
+}
 
-.banner-text2{
+.banner-text2 {
   position: absolute;
-  top: 330px;
-  left: 180px;
-  z-index: 1; /* 이미지 위에 텍스트가 보이도록 설정 */
+  top: 53%;
+  transform: translateY(-50%);
+  left: 10.5%;
+  z-index: 3; /* 이미지 위에 텍스트가 보이도록 설정 */
   color: rgba(255, 255, 255, 0.941);
   font-size: 23px;
   font-weight: 500;
@@ -75,68 +65,70 @@
   letter-spacing: 2px;
 }
 
-.left-icon {
+.left-icon, .right-icon {
   position: absolute;
-  top: 320px;
-  left: 1%;
+  top: 50%;
   transform: translateY(-50%);
-  color : white;
+  cursor: pointer;
+  z-index: 3;
+  color: white;
   background-color: #3a3a3a84;
   border-radius: 5px;
 }
 
-.right-icon {
-  position: absolute;
-  top: 320px;
-  right: 1%;
-  transform: translateY(-50%);
-  color : white;
-  background-color: #3a3a3a5c;
-  border-radius: 5px;
+.left-icon {
+  left: 10px;
 }
 
+.right-icon {
+  right: 10px;
+}
 
 .func-container {
   display: flex;
-  justify-content: space-between;
-  width: 1300px;
-  margin: 40px auto 0 auto;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-end;
+  position: absolute;
+  top: 56%;
+  right: 10%;
+  transform: translateY(-50%);
+  z-index: 4;
   font-family: 'Noto Sans KR', sans-serif;
-  text-decoration: none;
-  position: relative;
 }
 
 .func1, .func2, .func3, .func4 {
   background-color: #ffffff;
-  width: 250px;
-  height: 200px;
-  padding: 25px;
+  padding: 30px;
   font-size: 25px;
   color: #191919;
   border: 1px solid #d9d9d9;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
   font-family: 'JalnanGothic';
+  margin-bottom: 20px;
   transition: transform 0.2s ease;
   position: relative;
+  width: 400px;
 }
 
 .moveto {
   position: absolute;
-  bottom: 10px;
-  right: 25px;
+  bottom: 8px;
+  right: 20px;
   font-size: 45px;
   color: #191919;
   transition: transform 0.2s ease;
   text-decoration: none;
 }
 
+
 @keyframes moveArrow {
   0% {
     transform: translateX(0);
   }
   50% {
-    transform: translateX(5px); /* Adjust the amount of movement as desired */
+    transform: translateX(5px);
   }
   100% {
     transform: translateX(0);
@@ -144,14 +136,14 @@
 }
 
 .moveto svg {
-  transition: transform 0.2s ease; /* Ensure smooth transition for transform */
+  transition: transform 0.2s ease;
 }
 
 .func1:hover .moveto svg,
 .func2:hover .moveto svg,
 .func3:hover .moveto svg,
 .func4:hover .moveto svg {
-  animation: moveArrow 0.7s linear infinite; /* Apply moveArrow animation on .moveto svg within .func1 hover */
+  animation: moveArrow 0.7s linear infinite;
 }
 
 .func1:hover .moveto,
@@ -165,10 +157,85 @@
 .func2:hover,
 .func3:hover,
 .func4:hover {
-  transform: translateY(-10px); /* Example transform on .func1, .func2, .func3, .func4 hover */
+  transform: translateX(10px);
   color: #0084ff;
 }
 
+/* .func-container {
+  display: flex;
+  justify-content: space-between;
+  width: 1500px;
+  position: absolute;
+  top: 67%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 4;
+  font-family: 'Noto Sans KR', sans-serif;
+  text-decoration: none;
+} */
+
+/* .func1, .func2, .func3, .func4 {
+  background-color: #ffffff;
+  width: 280px;
+  height: 160px;
+  padding: 25px;
+  font-size: 25px;
+  color: #191919;
+  border: 1px solid #d9d9d9;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  font-family: 'JalnanGothic';
+  transition: transform 0.2s ease;
+  position: relative;
+} */
+
+/* .moveto {
+  position: absolute;
+  bottom: 0px;
+  right: 20px;
+  font-size: 45px;
+  color: #191919;
+  transition: transform 0.2s ease;
+  text-decoration: none;
+} */
+
+/* @keyframes moveArrow {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(5px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+} */
+
+/* .moveto svg {
+  transition: transform 0.2s ease;
+} */
+
+/* .func1:hover .moveto svg,
+.func2:hover .moveto svg,
+.func3:hover .moveto svg,
+.func4:hover .moveto svg {
+  animation: moveArrow 0.7s linear infinite;
+} */
+
+/* .func1:hover .moveto,
+.func2:hover .moveto,
+.func3:hover .moveto,
+.func4:hover .moveto {
+  color: #2395ff;
+} */
+
+/* .func1:hover,
+.func2:hover,
+.func3:hover,
+.func4:hover {
+  transform: translateY(-10px);
+  color: #0084ff;
+} */
 
 
 .detail {
@@ -179,35 +246,17 @@
   font-family: 'Noto Sans KR', sans-serif;
 }
 
-
-@keyframes slideAnimation {
-  from {
-    transform: translateX(100%);
-  }
-  to {
-    transform: translateX(0);
-  }
-}
-
-.Img {
-  animation: slideAnimation 0.7s ease-in-out;
-  width: 100%;
-  height: auto;
-}
-
 .footer {
   background-color: #ffffff;
   height: 60px;
   bottom: 0;
   width: 100%;
-  margin-top: 100px;
   border-top: 1px solid #e1e1e1;
   display: flex;
   align-items: center;
 }
 
-
-.footer-text{
+.footer-text {
   font-size: 12px;
   font-family: 'Noto Sans KR', sans-serif;
   font-weight: 600;
