--- a/src/pages/map/showmap.css
+++ b/src/pages/map/showmap.css
@@ -179,28 +179,6 @@
     border-right: 2px solid #ccc; /* 왼쪽에 구분선 추가 */
   }
 
-  .search-scrap-button {
-    font-family: 'Noto Sans KR', sans-serif;
-    position: absolute; /* 절대 위치 설정 */
-    bottom: 5px; /* 상단 여백 */
-    right: 5px; /* 우측 여백 */
-    font-family: 'Noto Sans KR', sans-serif;
-    background-color: #d1d1d1; /* 버튼 배경색 */
-    border-radius: 5px;
-    font-weight: 400;
-    color: #000000; /* 글자 색상 */
-    border: none; /* 테두리 없음 */
-    font-size: 14px; /* 글자 크기 */
-    cursor: pointer; /* 마우스 커서 모양 */
-    transition: all 0.2s ease; /* 배경색 변화에 애니메이션 효과 */
-  }
-
-    /* scrap-button 클래스 호버 스타일 */
-  .search-scrap-button:hover {
-    background-color: #3c3c3c;
-    color: #ffffff;
-  }
-
   .search-container input[type="text"] {
     padding: 8px 15px;
     border: 1px solid #ccc;
@@ -222,13 +200,42 @@
     border: 1px solid #a7a7a7;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.3s ease;
+    position: relative; /* 리스트 항목의 상대 위치 설정 */
+    overflow: hidden; /* 내용이 넘어가면 잘리도록 설정 */
+    padding-right: 60px; /* 버튼을 위한 여백 추가 */
   }
   
   .search-list li:hover {
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
     background-color: rgb(243, 243, 243);
   }
+  
 
+  .search-scrap-button {
+    font-family: 'Noto Sans KR', sans-serif;
+    position: absolute; /* 절대 위치 설정 */
+    bottom: 10px; /* 하단 여백 */
+    right: 10px; /* 우측 여백 */
+    background-color: #d1d1d1; /* 버튼 배경색 */
+    border-radius: 5px;
+    font-weight: 400;
+    color: #000000; /* 글자 색상 */
+    border: none; /* 테두리 없음 */
+    font-size: 14px; /* 글자 크기 */
+    cursor: pointer; /* 마우스 커서 모양 */
+    transition: all 0.2s ease; /* 배경색 변화에 애니메이션 효과 */
+    z-index: 1; /* 버튼을 위쪽으로 배치 */
+  }
+  
+  .search-scrap-button:hover {
+    background-color: #3c3c3c;
+    color: #ffffff;
+  }
+  
+  .search-result-item.selected {
+    border: 2px solid #387eff;
+  }
+  
   .search-result-item {
     position: relative; /* 버튼의 절대 위치 기준 */
     padding: 10px;
@@ -243,8 +250,7 @@
   .search-result-item.selected {
     border: 2px solid #387eff;
   }
-  
-  
+
   .search-list li strong {
     margin : 0px 5px;
     display: block;
