--- a/src/pages/mypage/moreplace.css
+++ b/src/pages/mypage/moreplace.css
@@ -161,20 +161,23 @@
   }
 
   .more-popup-inner1,
-.more-popup-inner2 {
+.more-popup-inner2,
+.more-popup-inner3 {
   background-color: transparent;
   padding: 20px;
   text-align: center;
 }
 
 .more-popup-inner1 p,
-.more-popup-inner2 p {
+.more-popup-inner2 p,
+.more-popup-inner3 p {
   font-size: 1.1rem;
   margin-bottom: 20px;
 }
 
 .more-popup-inner1 button,
-.more-popup-inner2 button {
+.more-popup-inner2 button,
+.more-popup-inner3 button {
   padding: 5px 15px;
   background-color: #2f2f2f;
   color: #fff;
@@ -185,6 +188,7 @@
 }
 
 .more-popup-inner1 button:hover,
-.more-popup-inner2 button:hover {
+.more-popup-inner2 button:hover,
+.more-popup-inner3 button:hover {
   background-color: #5b5b5b;
 }
