--- a/src/pages/map/showmap.css
+++ b/src/pages/map/showmap.css
@@ -64,39 +64,46 @@
     margin-bottom: 20px; /* 지도 아래에 여백 추가 */
   }
   
-  .scrap-container {
-    width: 20%;
-    overflow-y: scroll;
-    padding: 20px;
-    position: relative;
-    border-left: 2px solid #ccc; /* 왼쪽에 구분선 추가 */
-  }
+.scrap-container {
+  width: 20%;
+  overflow: hidden; /* 전체 컨테이너에 스크롤을 숨깁니다. */
+  padding: 20px;
+  border-left: 2px solid #ccc; /* 왼쪽에 구분선 추가 */
+  display: flex; /* 내부 요소들을 수직으로 정렬하기 위해 flexbox 사용 */
+  flex-direction: column; /* 수직 정렬 */
+}
 
-  .scrap-buttons {
-    position: fixed; /* 버튼을 고정합니다. */
-    bottom: 15px; /* 하단에 배치합니다. */
-    z-index: 1; /* 다른 요소 위에 올라가도록 설정합니다. */
-  }
+.scrap-list {
+  overflow-y: auto; /* 스크롤바 추가 */
+  flex-grow: 1; /* 스크롤 가능한 영역을 최대한 차지하도록 설정 */
+  margin-bottom: 20px; /* 버튼 컨테이너와의 간격을 위해 여백 추가 */
+}
 
-    
-  .scrap-buttons button {
-    font-family: 'Noto Sans KR', sans-serif;
-    letter-spacing: 1px;
-    padding: 13px 30px; /* 버튼 내부 여백 설정 */
-    background-color: #3f3f3f; /* 배경색 설정 */
-    color: white; /* 글자색 설정 */
-    border: none; /* 테두리 없앰 */
-    border-radius: 10px; /* 버튼 모서리를 둥글게 만듦 */
-    cursor: pointer; /* 커서를 포인터로 변경하여 마우스 호버 시 인터랙션을 나타냄 */
-    transition: background-color 0.2s ease; /* 배경색 변화에 대한 부드러운 전환 효과 추가 */
-    margin-right: 7px; /* 각 버튼 사이의 간격을 조정합니다. */
-  }
+.scrap-buttons {
+  position: relative; /* 고정 위치에서 상대 위치로 변경 */
+  z-index: 1; /* 다른 요소 위에 올라가도록 설정합니다. */
+  background: #f9f9f9; /* 배경색 추가로 컨테이너와 구분 */
+  justify-content: center; /* 버튼을 중앙으로 정렬합니다. */
+}
 
-  /* 버튼에 호버 효과 추가 */
-  .scrap-buttons button:hover {
-    background-color: #5a5a5a; /* 호버 시 배경색 변경 */
-  }
 
+.scrap-buttons button {
+  font-family: 'Noto Sans KR', sans-serif;
+  letter-spacing: 1px;
+  padding: 13px 32px; /* 버튼 내부 여백 설정 */
+  background-color: #3f3f3f; /* 배경색 설정 */
+  color: white; /* 글자색 설정 */
+  border: none; /* 테두리 없앰 */
+  border-radius: 10px; /* 버튼 모서리를 둥글게 만듦 */
+  cursor: pointer; /* 커서를 포인터로 변경하여 마우스 호버 시 인터랙션을 나타냄 */
+  transition: background-color 0.2s ease; /* 배경색 변화에 대한 부드러운 전환 효과 추가 */
+  margin-right: 10px; /* 각 버튼 사이의 간격을 조정합니다. */
+}
+
+/* 버튼에 호버 효과 추가 */
+.scrap-buttons button:hover {
+  background-color: #5a5a5a; /* 호버 시 배경색 변경 */
+}
 
   .scrap-title {
     font-size: 25px;
@@ -113,7 +120,6 @@
     font-size: 18px;
     margin-top: 10px; /* 상단 여백 조정 */
     display: inline-block; /* 텍스트 길이에 맞춰 자동으로 너비 설정 */
-    
   }  
   
   .openguide:hover {
